fixed margin on mobile version

--- a/src/pages/game/gameField/GameField.module.scss
+++ b/src/pages/game/gameField/GameField.module.scss
@@ -30,7 +30,11 @@
 }
 
 .svg {
-  margin-bottom: 32px;
+  margin-bottom: 8px;
+
+  @media (min-width: 1024px) {
+    margin-bottom: 32px;
+  }
 
   &:hover path {
     stroke: #ff8b37;
